// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions > region create should work 1`] = `
Object {
  "payload": Object {
    "next": [Function],
    "options": Object {
      "body": FormData {
        Symbol(impl): FormDataImpl {
          "_entries": Array [
            Object {
              "name": "region",
              "value": "{\\"name\\":\\"Mock Region\\",\\"description\\":\\"Region description\\",\\"bounds\\":{\\"north\\":39,\\"east\\":-76,\\"south\\":38,\\"west\\":-77}}",
            },
          ],
          Symbol(wrapper): [Circular],
        },
      },
      "method": "post",
    },
    "url": "/api/region",
  },
  "type": "fetch",
}
`;

exports[`actions > region create should work 2`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "body": FormData {
          Symbol(impl): FormDataImpl {
            "_entries": Array [
              Object {
                "name": "region",
                "value": "{\\"name\\":\\"Mock Region\\",\\"description\\":\\"Region description\\",\\"bounds\\":{\\"north\\":39,\\"east\\":-76,\\"south\\":38,\\"west\\":-77}}",
              },
            ],
            Symbol(wrapper): [Circular],
          },
        },
        "method": "post",
      },
      "url": "/api/region",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > region create should work 3`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "body": FormData {
          Symbol(impl): FormDataImpl {
            "_entries": Array [
              Object {
                "name": "region",
                "value": "{\\"name\\":\\"Mock Region\\",\\"description\\":\\"Region description\\",\\"bounds\\":{\\"north\\":39,\\"east\\":-76,\\"south\\":38,\\"west\\":-77}}",
              },
            ],
            Symbol(wrapper): [Circular],
          },
        },
        "method": "post",
      },
      "url": "/api/region",
    },
    "type": "decrement outstanding fetches",
  },
  Array [
    Array [
      Object {
        "payload": Object {
          "options": Object {},
          "url": "/api/region/1",
        },
        "type": "increment outstanding fetches",
      },
      Promise {},
    ],
    Object {
      "payload": Object {
        "args": Array [
          "/regions/1",
        ],
        "method": "push",
      },
      "type": "@@router/CALL_HISTORY_METHOD",
    },
  ],
]
`;

exports[`actions > region deleteRegion should work 1`] = `
Object {
  "payload": Object {
    "next": [Function],
    "options": Object {
      "method": "delete",
    },
    "url": "/api/region/1",
  },
  "type": "fetch",
}
`;

exports[`actions > region deleteRegion should work 2`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "method": "delete",
      },
      "url": "/api/region/1",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > region deleteRegion should work 3`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "method": "delete",
      },
      "url": "/api/region/1",
    },
    "type": "decrement outstanding fetches",
  },
  Array [
    Object {
      "payload": "1",
      "type": "delete region",
    },
    Object {
      "payload": Object {
        "args": Array [
          "/",
        ],
        "method": "push",
      },
      "type": "@@router/CALL_HISTORY_METHOD",
    },
  ],
]
`;

exports[`actions > region load should work 1`] = `[Function]`;

exports[`actions > region load should work 2`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {},
      "url": "/api/region/1",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > region load should work 3`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {},
      "url": "/api/region/1",
    },
    "type": "decrement outstanding fetches",
  },
]
`;

exports[`actions > region loadAll should work 1`] = `
Object {
  "payload": Object {
    "next": [Function],
    "url": "/api/region",
  },
  "type": "fetch",
}
`;

exports[`actions > region loadAll should work 2`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {},
      "url": "/api/region",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > region loadAll should work 3`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {},
      "url": "/api/region",
    },
    "type": "decrement outstanding fetches",
  },
  Object {
    "payload": Array [],
    "type": "set all regions",
  },
]
`;

exports[`actions > region save should work 1`] = `
Object {
  "payload": Object {
    "next": [Function],
    "options": Object {
      "body": Object {
        "_id": "1",
        "accessGroup": "accessGroupName",
        "bounds": Object {
          "east": -76,
          "north": 39,
          "south": 38,
          "west": -77,
        },
        "createdAt": "2017-11-08T12:30:50.133Z",
        "createdBy": "person@gmail.com",
        "description": "Region description",
        "name": "Mock Region",
        "nonce": "12345",
        "opportunityDatasets": Array [
          Object {
            "_id": "Workers_total",
            "name": "Workers total",
            "sourceName": "lodes-data-2014",
          },
        ],
        "statusCode": "DONE",
        "updatedAt": "2017-11-08T12:31:19.602Z",
        "updatedBy": "person@gmail.com",
      },
      "method": "put",
    },
    "url": "/api/region/1",
  },
  "type": "fetch",
}
`;

exports[`actions > region save should work 2`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "body": Object {
          "_id": "1",
          "accessGroup": "accessGroupName",
          "bounds": Object {
            "east": -76,
            "north": 39,
            "south": 38,
            "west": -77,
          },
          "createdAt": "2017-11-08T12:30:50.133Z",
          "createdBy": "person@gmail.com",
          "description": "Region description",
          "name": "Mock Region",
          "nonce": "12345",
          "opportunityDatasets": Array [
            Object {
              "_id": "Workers_total",
              "name": "Workers total",
              "sourceName": "lodes-data-2014",
            },
          ],
          "statusCode": "DONE",
          "updatedAt": "2017-11-08T12:31:19.602Z",
          "updatedBy": "person@gmail.com",
        },
        "method": "put",
      },
      "url": "/api/region/1",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > region save should work 3`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "body": Object {
          "_id": "1",
          "accessGroup": "accessGroupName",
          "bounds": Object {
            "east": -76,
            "north": 39,
            "south": 38,
            "west": -77,
          },
          "createdAt": "2017-11-08T12:30:50.133Z",
          "createdBy": "person@gmail.com",
          "description": "Region description",
          "name": "Mock Region",
          "nonce": "12345",
          "opportunityDatasets": Array [
            Object {
              "_id": "Workers_total",
              "name": "Workers total",
              "sourceName": "lodes-data-2014",
            },
          ],
          "statusCode": "DONE",
          "updatedAt": "2017-11-08T12:31:19.602Z",
          "updatedBy": "person@gmail.com",
        },
        "method": "put",
      },
      "url": "/api/region/1",
    },
    "type": "decrement outstanding fetches",
  },
  Array [
    Array [
      Object {
        "payload": Object {
          "options": Object {},
          "url": "/api/region/1",
        },
        "type": "increment outstanding fetches",
      },
      Promise {},
    ],
    Object {
      "payload": Object {
        "args": Array [
          "/regions/1",
        ],
        "method": "push",
      },
      "type": "@@router/CALL_HISTORY_METHOD",
    },
  ],
]
`;

exports[`actions > region setAll should work 1`] = `
Object {
  "type": "set all regions",
}
`;
